Update Fix error from Indonesia Commit

--- a/z-ml-overlay-connectivitysettings/res/values-in/strings.xml
+++ b/z-ml-overlay-connectivitysettings/res/values-in/strings.xml
@@ -669,7 +669,7 @@ Hanya dekatkan perangkat (biasanya bagian belakang ke bagian belakang) dan sentu
     <string name="drive_mode_tips">Ingatkan dengan rekaman suara saat panggilan atau SMS tiba</string>
     <string name="drive_mode_title">Mode Mengemudi</string>
     <string name="dtmf_tone_enable_title">Nada DTMF</string>
-    <string name="dual_sim_network_settings_title">SIM & Jaringan</string>
+    <string name="dual_sim_network_settings_title">SIM &amp; Jaringan</string>
     <string name="earpod_adjust">Kalibrasi kontrol earphone</string>
     <string name="empty_networks_list">Tidak ada jaringan</string>
     <string name="enable_5g_settings_title">Aktifkan 5G</string>
@@ -775,7 +775,7 @@ Hanya dekatkan perangkat (biasanya bagian belakang ke bagian belakang) dan sentu
     <string name="haptic_feedback_enable_title">Umpan Balik Haptic</string>
     <string name="hdcp_checking_dialog_title">Atur perilaku pemeriksaan HDCP</string>
     <string name="hdcp_checking_title">Pemeriksaan HDCP</string>
-    <string name="help_feedback_label">Bantuan & Masukan</string>
+    <string name="help_feedback_label">Bantuan &amp; Masukan</string>
     <string name="help_label">Bantuan dan masukan</string>
     <string name="hifi_auto">Otomatis</string>
     <string name="hifi_auto_summary">Kecocokan Otomatis</string>
@@ -819,7 +819,7 @@ Hanya dekatkan perangkat (biasanya bagian belakang ke bagian belakang) dan sentu
     <string name="key_sounds_enable_title">Suara Keyboard</string>
     <string name="keyboard_layout_default_label">Default</string>
     <string name="keyboard_layout_dialog_title">Pilih tata letak keyboard</string>
-    <string name="keyboard_settings_category">Keyboard & Metode Input</string>
+    <string name="keyboard_settings_category">Keyboard &amp; Metode Input</string>
     <string name="keywords_adb_wireless">adb, debug, dev</string>
     <string name="keywords_alarms_and_reminders">jadwal, alarm, pengingat, jam</string>
     <string name="keywords_display_cast_screen">proyek</string>
@@ -864,7 +864,7 @@ Hanya dekatkan perangkat (biasanya bagian belakang ke bagian belakang) dan sentu
     <string name="location_permission">Akses Lokasi</string>
     <string name="location_scanning_bluetooth_always_scanning_description">Perbaiki lokasi dengan memungkinkan aplikasi dan layanan sistem untuk mendeteksi perangkat Bluetooth kapan saja.</string>
     <string name="location_scanning_bluetooth_always_scanning_title">Pemindaian Bluetooth</string>
-    <string name="location_scanning_screen_title">Pemindaian WLAN & Bluetooth</string>
+    <string name="location_scanning_screen_title">Pemindaian WLAN &amp; Bluetooth</string>
     <string name="location_scanning_wifi_always_scanning_description">Perbaiki lokasi dengan memungkinkan aplikasi dan layanan sistem untuk mendeteksi jaringan WLAN kapan saja.</string>
     <string name="location_scanning_wifi_always_scanning_title">Pemindaian WLAN</string>
     <string name="location_settings_title">Layanan Lokasi</string>
@@ -1567,22 +1567,47 @@ Jika koneksi terjalin antara dua ponsel Meizu, Anda juga dapat berbagi aplikasi 
     <string name="select_logpersist_title">Simpan data logger secara permanen pada perangkat</string>
     <string name="select_private_dns_configuration_dialog_title">Pilih Mode DNS Pribadi</string>
     <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
-    <string name="select_private_dns_configuration_title">DNS Pribadi</string>
+    <string name="select_sim_for_calls">Telepon dengan</string>
+    <string name="select_sim_for_data">Pilih SIM untuk data</string>
+    <string name="select_usb_configuration_dialog_title">Pilih Konfigurasi USB</string>
+    <string name="select_usb_configuration_title">Pilih Konfigurasi USB</string>
+    <string name="select_webview_provider_dialog_title">Atur implementasi WebView</string>
+    <string name="select_webview_provider_title">Implementasi WebView</string>
+    <string name="select_webview_provider_toast_text">Pilihan ini tidak berlaku lagi. Coba lagi.</string>
+    <string name="servicedesc">Wifi Bagikan HCE</string>
+    <string name="set_data_usage_summary">Mengaktifkan fungsi ini akan menghabiskan data Kartu%1$d. Tetapkan batas paket untuk mengingatkan Anda dan menghindari biaya tambahan.</string>
+    <string name="set_data_usage_title">Tetapkan batas paket Kartu%1$d</string>
+    <string name="set_screen_lock">Kunci kata sandi</string>
+    <string name="settings_copyright_activity_title">Pernyataan hukum</string>
+    <string name="settings_label">Pengaturan Konektivitas</string>
+    <string name="settings_label_launcher">Pengaturan Konektivitas</string>
+    <string name="settings_license_activity_title">Lisensi sumber terbuka</string>
+    <string name="settingslib_learn_more_text">Belajarlah lagi</string>
+    <string name="shared_data_delete_failure_text">Terjadi kesalahan saat menghapus data bersama.</string>
+    <string name="shared_data_no_accessors_dialog_text">Tidak ada sewa yang diperoleh untuk data bersama ini. Apakah Anda ingin menghapusnya?</string>
+    <string name="shared_data_no_blobs_text">Tidak ada data yang dibagikan untuk pengguna ini.</string>
+    <string name="shared_data_query_failure_text">Terjadi kesalahan saat mengambil data bersama. Coba lagi.</string>
+    <string name="shared_data_summary">Melihat dan mengubah data bersama</string>
+    <string name="shared_data_title">Data yang dibagikan</string>
+    <string name="show_all_anrs">Tampilkan ANR latar belakang</string>
+    <string name="show_all_anrs_summary">Menampilkan dialog Aplikasi Tidak Merespons untuk aplikasi latar belakang</string>
+    <string name="show_hw_layers_updates">Tampilkan pembaruan lapisan perangkat keras</string>
+    <string name="show_hw_layers_updates_summary">Flash lapisan perangkat keras menjadi hijau saat diperbarui</string>
+    <string name="show_hw_screen_updates">Tampilkan pembaruan tampilan</string>
+    <string name="show_hw_screen_updates_summary">Tampilan flash di dalam jendela saat digambar</string>
+    <string name="show_non_rect_clip">Debug operasi klip non-persegi panjang</string>
+    <string name="show_notification_channel_warnings">Tampilkan peringatan saluran notifikasi</string>
+    <string name="show_notification_channel_warnings_summary">Menampilkan peringatan di layar ketika aplikasi memposting notifikasi tanpa saluran yang valid</string>
+    <string name="show_notification_content">Tampilkan konten notifikasi</string>
+    <string name="show_notification_content_summary">Tampilkan konten notifikasi di layar kunci</string>
+    <string name="show_notification_on_lockscreen">Tampilkan notifikasi di layar kunci</string>
+    <string name="show_screen_updates">Tampilkan pembaruan permukaan</string>
+    <string name="show_screen_updates_summary">Flash seluruh permukaan jendela saat diperbarui</string>
+    <string name="show_touches">Tampilkan ketukan</string>
+    <string name="show_touches_summary">Tampilkan masukan visual untuk ketukan</string>
+    <string name="shutdown_verify_password">Verifikasi kata sandi saat mematikan telepon</string>
+    <string name="silent_mode_title">Mode senyap</string>
+    <string name="sim_1">SIM1 -</string>
     <string name="sim_2">SIM2 -</string>
     <string name="sim_calls_ask_first_prefs_title">Tanyakan setiap kali</string>
     <string name="sim_card_select_title">Pilih Kartu SIM</string>
