Fix framework building

--- a/z-ml-overlay-frameworkres/res/values-in/strings.xml
+++ b/z-ml-overlay-frameworkres/res/values-in/strings.xml
@@ -230,8 +230,8 @@ Anda dapat mengubah pintasan ini ke fitur lain di Pengaturan > Aksesibilitas."</
 <string name="accessibility_system_action_screenshot_label">Tangkapan Layar</string>
 <string name="accessibility_uncheck_legacy_item_warning">%s telah dimatikan</string>
 <string name="action_bar_home_description">Navigasi ke beranda</string>
-<string name="action_bar_home_description_format>%1$s, %2$s</string>
-<string name="action_bar_home_subtitle_description_format>%1$s, %2$s, %3$s</string>
+<string name="action_bar_home_description_format">%1$s, %2$s</string>
+<string name="action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
 <string name="action_bar_up_description">Navigasi ke atas</string>
 <string name="action_menu_overflow_description">Lebih banyak opsi</string>
 <string name="action_mode_done">Selesai</string>
@@ -286,14 +286,14 @@ Anda dapat mengubah pintasan ini ke fitur lain di Pengaturan > Aksesibilitas."</
 <string name="app_blocked_message">%1$s saat ini tidak tersedia.</string>
 <string name="app_blocked_title">Aplikasi tidak tersedia</string>
 <string name="app_category_accessibility">Aksesibilitas</string>
-<string name="app_category_audio">Musik & Audio</string>
+<string name="app_category_audio">Musik &amp; Audio</string>
 <string name="app_category_game">Permainan</string>
-<string name="app_category_image">Foto & Gambar</string>
-<string name="app_category_maps">Peta & Navigasi</string>
-<string name="app_category_news">Berita & Majalah</string>
+<string name="app_category_image">Foto &amp; Gambar</string>
+<string name="app_category_maps">Peta &amp; Navigasi</string>
+<string name="app_category_news">Berita &amp; Majalah</string>
 <string name="app_category_productivity">Produktivitas</string>
-<string name="app_category_social">Sosial & Komunikasi</string>
-<string name="app_category_video">Film & Video</string>
+<string name="app_category_social">Sosial &amp; Komunikasi</string>
+<string name="app_category_video">Film &amp; Video</string>
 <string name="app_info">Info Aplikasi</string>
 <string name="app_not_found">Tidak ada aplikasi yang ditemukan untuk menangani tindakan ini</string>
 <string name="app_running_notification_text">Ketuk untuk informasi lebih lanjut atau untuk menghentikan aplikasi.</string>
