--- a/z-ml-overlay-systemui/res/values/strings.xml
+++ b/z-ml-overlay-systemui/res/values/strings.xml
@@ -1770,15 +1770,15 @@ If you have questions, contact %2$s."</string>
     <string name="percentage">%</string>
     <string name="permission_type_edit_contact">Edit Contact</string>
     <string name="permission_type_etc">etc.</string>
-    <string name="permission_type_just">Just Now</string>
-    <string name="permission_type_location">Location</string>
-    <string name="permission_type_photo">Use Camera</string>
-    <string name="permission_type_read_contact">Read Contact</string>
-    <string name="permission_type_read_message">Read Message</string>
-    <string name="permission_type_read_share_plate">Read Clipboard</string>
-    <string name="permission_type_record">Record</string>
-    <string name="permission_type_using">In Progress</string>
-    <string name="permission_type_write_share_plate">Write Clipboard</string>
+    <string name="permission_type_just"> just now </string>
+    <string name="permission_type_location">location</string>
+    <string name="permission_type_photo">use Camera</string>
+    <string name="permission_type_read_contact">read contact</string>
+    <string name="permission_type_read_message">read message</string>
+    <string name="permission_type_read_share_plate">read clipboard</string>
+    <string name="permission_type_record">record</string>
+    <string name="permission_type_using"> in progress </string>
+    <string name="permission_type_write_share_plate">write clipboard</string>
     <string name="person_available">Available</string>
     <string name="phone_hint">Swipe from icon for phone</string>
     <string name="phone_label">open phone</string>
