fix build for dialer

--- a/z-ml-overlay-flyme-dialer/res/values-vi/strings.xml
+++ b/z-ml-overlay-flyme-dialer/res/values-vi/strings.xml
@@ -1593,7 +1593,7 @@ Unicom"</string>
     <string name="specail_number_dianli">Tổng công ty Điện lực Nhà nước</string>
     <string name="specail_number_dianxin">Đường dây nóng dịch vụ khách hàng của China Telecom</string>
     <string name="specail_number_dishui">Đường dây nóng dịch vụ thuế địa phương</string>
-    <string name="specail_number_doubang">Công ty TNHH Bảo hiểm Tài sản & Tai nạn Dubon</string>
+    <string name="specail_number_doubang">Công ty TNHH Bảo hiểm Tài sản &amp; Tai nạn Dubon</string>
     <string name="specail_number_ems">China Post Express Mail</string>
     <string name="specail_number_federal">Fedex</string>
     <string name="specail_number_gongshang">ICBC</string>
